force-app/main/default/objects/Release_Note__c/Release_Note__c.object-meta.xml
<CustomObject>
    <label>Release Note</label>
    <nameField>
        <label>Release Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>