force-app/main/default/objects/Release_Note__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Release Notes</relationshipLabel>
    <relationshipName>Release_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>