force-app/main/default/objects/Release_Note__c/fields/Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Knowledge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Knowledge</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Release Notes</relationshipLabel>
    <relationshipName>Release_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>