force-app/main/default/objects/Release_Note__c/fields/Postponed__c.field-meta.xml
<CustomField>
    <fullName>Postponed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Postponed</label>
    <type>Checkbox</type>
</CustomField>