force-app/main/default/objects/Release_Note__c/fields/Release_Details__c.field-meta.xml
<CustomField>
    <fullName>Release_Details__c</fullName>
    <label>Release Details</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full program</fullName>
            </value>
            <value>
                <fullName>Service pack</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Workspace app</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>