force-app/main/default/objects/Release_Note__c/listViews/Access_LMS.listView-meta.xml
<ListView>
    <fullName>Access_LMS</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Release_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Version__c</columns>
    <columns>Release_Details__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Access LMS</value>
    </filters>
    <label>Access LMS</label>
</ListView>