force-app/main/default/objects/Release_Note__c/listViews/Access_Supply_Chain.listView-meta.xml
<ListView>
    <fullName>Access_Supply_Chain</fullName>
    <columns>NAME</columns>
    <columns>Knowledge__c</columns>
    <columns>Postponed__c</columns>
    <columns>Product__c</columns>
    <columns>Release_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Version__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Access Supply Chain</value>
    </filters>
    <label>Access Supply Chain</label>
</ListView>