force-app/main/default/objects/Release_Note__c/listViews/All_release_notes.listView-meta.xml
<ListView>
    <fullName>All_release_notes</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Access People - HCM,Access People Hospitality,Data Hub</value>
    </filters>
    <label>All release notes</label>
</ListView>