force-app/main/default/objects/Release_Note__c/listViews/FactoryMaster.listView-meta.xml
<ListView>
    <fullName>FactoryMaster</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>FactoryMaster</value>
    </filters>
    <label>FactoryMaster</label>
</ListView>