force-app/main/default/objects/Release_Note__c/listViews/My_School_Portal.listView-meta.xml
<ListView>
    <fullName>My_School_Portal</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>My School Portal</value>
    </filters>
    <label>My School Portal</label>
</ListView>