force-app/main/default/objects/Release_Note__c/listViews/PeopleXD.listView-meta.xml
<ListView>
    <fullName>PeopleXD</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>PeopleXD - Expense,PeopleXD - Payroll,PeopleXD - Pension,PeopleXD - People Management,PeopleXD - Recruitment,PeopleXD - Talent,PeopleXD - Workforce Management</value>
    </filters>
    <label>PeopleXD</label>
</ListView>